--- a/index.html
+++ b/index.html
@@ -48,18 +48,25 @@
 			cursor: grab;
 		}
 
+		.btn {
+			font-size: xx-large;
+		}
+
 	</style>
 </head>
 
 <body>
 	<div class="slot" data-no="0">
 		<div class="pole"></div>
+		<button class="btn"></button>
 	</div>
 	<div class="slot" data-no="1">
 		<div class="pole"></div>
+		<button class="btn"></button>
 	</div>
 	<div class="slot" data-no="2">
 		<div class="pole"></div>
+		<button class="btn"></button>
 	</div>
 
 	<script src="main.js"></script>
