--- a/index.html
+++ b/index.html
@@ -3,66 +3,10 @@
 
 <head lang="en">
 	<meta charset="UTF-8">
-	<title></title>
-	<style>
-		* {
-			padding: 0;
-			margin: 0;
-			font-size: 6vh;
-		}
-
-		body {
-			display: flex;
-			justify-content: space-between;
-			align-items: stretch;
-			position: absolute;
-			top: 0;
-			left: 0;
-			right: 0;
-			bottom: 0;
-		}
-
-		.slot {
-			position: relative;
-			display: flex;
-			flex: 1;
-			height: 100%;
-			flex-direction: column-reverse;
-			align-items: center;
-		}
-
-		.pole {
-			width: 3vw;
-			position: absolute;
-			height: 80vh;
-			background: black;
-			left: 50%;
-			bottom: 0;
-			transform: translateX(-50%);
-			z-index: -1;
-		}
-
-		.plate {
-			height: 8vh;
-			background: aqua;
-			margin: 1vh;
-			cursor: grab;
-		}
-
-		.setting {
-			position: absolute;
-			top: 5vh;
-			left: 50%;
-			transform: translateX(-50%);
-			z-index: 100;
-			white-space: nowrap;
-		}
-
-		#num_input {
-			width: 2em;
-		}
-
-	</style>
+	<meta name="viewport"
+		content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+	<title>在线汉诺塔</title>
+	<link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
