--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<div class="setting">
 		<button id="start_button">设置层数</button>
 		<input id="num_input" value="5" />
+		<br />
+		步数：<span id="step_span">0</span>
 	</div>
 	<div class="slot" data-no="0">
 		<div class="pole"></div>
